# Sudoku-solver

./: CMakeLists.txt  README.md  config.json
input/: sudoku_test_1.txt  sudoku_test_2.txt  sudoku_test_3.txt  temp_input.txt  test.txt
output/: measurements.txt  output.txt
output/solution/: cuda_sudoku_test_1.txt
src/: GUI.py  average.py  cuda.cu  omp.cpp  run_tests.cpp  seq.cpp  sudoku_generator.cpp  sudoku_to_graph_json.cpp  tempCodeRunnerFile.py
